Ejercicio 1 (Informe) y 2 listos